@@ -504,7 +504,7 @@ with some simple extensions.
   :group 'gnus-threading
   :type 'string)
 
-(defcustom gnus-summary-mode-line-format "Gnus: %%b [%A] %Z"
+(defcustom gnus-summary-mode-line-format "Gnus: %g [%A] %Z"
   "*The format specification for the summary mode line.
 It works along the same lines as a normal formatting string,
 with some simple extensions:
@@ -1385,7 +1385,8 @@ increase the score of each group you read."
     "s" gnus-article-highlight-signature)
 
   (gnus-define-keys (gnus-summary-wash-mime-map "M" gnus-summary-wash-map)
-    "w" gnus-article-decode-mime-words)
+    "w" gnus-article-decode-mime-words
+    "c" gnus-article-decode-charset)
 
   (gnus-define-keys (gnus-summary-wash-time-map "T" gnus-summary-wash-map)
     "z" gnus-article-date-ut
@@ -1488,6 +1489,7 @@ increase the score of each group you read."
               ["Citation" gnus-article-highlight-citation t])
 	     ("MIME"
 	      ["Words" gnus-article-decode-mime-words t]
+	      ["Charset" gnus-article-decode-charset t]
 	      ["QP" gnus-article-de-quoted-unreadable t])
              ("Date"
               ["Local" gnus-article-date-local t]
@@ -1881,6 +1883,7 @@ The following commands are available:
   (make-local-hook 'pre-command-hook)
   (add-hook 'pre-command-hook 'gnus-set-global-variables nil t)
   (gnus-run-hooks 'gnus-summary-mode-hook)
+  (mm-enable-multibyte)
   (gnus-update-format-specifications nil 'summary 'summary-mode 'summary-dummy)
   (gnus-update-summary-mark-positions))
 
@@ -4526,10 +4529,9 @@ list of headers that match SEQUENCE (see `nntp-retrieve-headers')."
 				     number dependencies force-new))))
 		   (push header headers))
 	      (forward-line 1))
-	  ;(error
-	  ; (gnus-error 4 "Strange nov line (%d)"
-	;	       (count-lines (point-min) (point))))
-	  )
+	  (error
+	   (gnus-error 4 "Strange nov line (%d)"
+		       (count-lines (point-min) (point)))))
 	(forward-line 1))
       ;; A common bug in inn is that if you have posted an article and
       ;; then retrieves the active file, it will answer correctly --
