@@ -1,6 +1,8 @@
 1998-08-31 11:46:57  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.texi (Mail Folders): Addition.
+	(Group Parameters): Addition.
+	(MIME Commands): New.
 
 1998-08-27 07:29:17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
